fixed jumping when clicing partially scrolled nav bar, cleaned up javascript

--- a/style/main.css
+++ b/style/main.css
@@ -282,6 +282,10 @@ a.social-media-image {
 	padding:10px;
 }
 
+.secondary-page {
+	display: none;
+}
+
 @media (max-width: 800px) {
     .social-media {
         visibility: hidden;
